--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Kevin Barroga</title>
-    <!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-  </head>
-  <body>
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/cv">CV</a></li>
-            <li><a href="/blog">Blog</a></li>
-        </ul>
-    </nav>
-    <div class="container">
-        <div class="blurb">
-            <h1>Hi there, I'm Kevin Barroga!</h1>
-        <p>I'm best known as the guy that doesn't say much... Don't trust me. <a href="/about">Read more about my life...</a></p>
-        </div><!-- /.blurb -->
-    </div><!-- /.container -->
-    <footer>
-        <ul>
-            <li><a href="mailto:b.roge46@gmail.com@gmail.com">email</a></li>
-            <li><a href="https://github.com/kevbarroga">github.com/kevbarroga</a></li>
-      </ul>
-    </footer>
-  </body>
+---
+layout: default
+title: Kevin Barroga, Xriva Oneebtn
+---
+<div class="blurb">
+  <h1>Hi there, I'm Kevin Barroga!</h1>
+  <p>I'm best known as the guy that doesn't say much... Don't trust me. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
