--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Kevin Barroga, Xriva Oneebtn
+title: Oneebtn
 ---
 <div class="blurb">
-  <h1>Hi there, I'm Kevin Barroga!</h1>
-  <p>I'm best known as the guy that doesn't say much... Don't trust me. <a href="/about">Read more about my life...</a></p>
+  <h1>Hi there, this is my jekyll site!</h1>
+  <p><a href="/about">Read more about it here...</a></p>
 </div><!-- /.blurb -->
