--- a/cv/index.html
+++ b/cv/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: CV of Kevin Barroga
+title: CV of Oneebtn
 ---
 
 <div class="cv">
   <a href="#" class="download" title="Download CV as PDF">Download CV</a>     
-  <h1>Kevin Barroga</h1>
+  <h1>Oneebtn</h1>
   <address>
     <strong>Affiliation</strong><br>
       Honolulu, HI<br>
