--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
-title: Oneebtn
+title: barro.ga
 ---
 <div class="blurb">
-  <h1>Hi there, this is my jekyll site!</h1>
-  <p><a href="/about">Read more about it here...</a></p>
+  <h1>Hi there, my Jekyll site has migrated to <a href="https://kevinbarroga.me">Hugo</a></h1>
 </div><!-- /.blurb -->
