--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: default
 title: barro.ga
 ---
 <div class="blurb">
-  <h1>Hi there, my Jekyll site has migrated to <a href="https://kevinbarroga.me">Hugo</a></h1>
+  <h1>Hi there, my Jekyll site has migrated to <a href="https://www.kevinbarroga.me">Hugo</a></h1>
 </div><!-- /.blurb -->
